2020-10-15  David Kilzer  <ddkilzer@apple.com>

        PDFPlugin.mm:2303:139: error: type 'SEL _Nullable' cannot be narrowed to 'bool' in initializer list [-Wc++11-narrowing]
        <https://webkit.org/b/217791>
        <rdar://problem/70349804>

        Reviewed by Tim Horton.

        * WebProcess/Plugins/PDF/PDFPlugin.mm:
        (WebKit::PDFPlugin::handleContextMenuEvent):
        - Use `!!` to convert result to `bool`.

2020-10-15  Aditya Keerthi  <akeerthi@apple.com>

        Crash in -[WKDateTimePicker setDateTimePickerToInitialValue]
        https://bugs.webkit.org/show_bug.cgi?id=217763
        <rdar://problem/68635008>

        Reviewed by Wenson Hsieh.

        Crash occurs due to the use of an autoreleased NSString in
        setDateTimePickerToInitialValue. To fix, make the variable
        a RetainPtr.

        * UIProcess/ios/forms/WKDateTimeInputControl.mm:
        (-[WKDateTimePicker setDateTimePickerToInitialValue]):

2020-10-15  Chris Lord  <clord@igalia.com>

        [GTK][WPE] Add support for smooth scrolling animation with async scrolling
        https://bugs.webkit.org/show_bug.cgi?id=210382

        Reviewed by Carlos Garcia Campos.

        Add hasPreciseScrollingDeltas to GTK/WPE wheel events.

        No new tests needed.

        * Shared/WebEventConversion.cpp:
        (WebKit::WebKit2PlatformWheelEvent::WebKit2PlatformWheelEvent):
        * Shared/WebWheelEvent.cpp:
        (WebKit::WebWheelEvent::WebWheelEvent):
        (WebKit::WebWheelEvent::encode const):
        (WebKit::WebWheelEvent::decode):
        * Shared/WebWheelEvent.h:
        * Shared/WebWheelEventCoalescer.cpp:
        (WebKit::WebWheelEventCoalescer::canCoalesce):
        (WebKit::WebWheelEventCoalescer::coalesce):
        * Shared/gtk/NativeWebWheelEventGtk.cpp:
        (WebKit::NativeWebWheelEvent::NativeWebWheelEvent):
        * Shared/gtk/WebEventFactory.cpp:
        (WebKit::WebEventFactory::createWebWheelEvent):
        * Shared/libwpe/WebEventFactory.cpp: