@@ -1,3 +1,15 @@
+2020-10-15  Per Arne Vollan  <pvollan@apple.com>
+
+        [macOS] Add telemetry for distributed notification service
+        https://bugs.webkit.org/show_bug.cgi?id=217762
+        <rdar://problem/70341045>
+
+        Reviewed by Brent Fulgham.
+
+        Add telemetry with backtrace for the distributed notification service on macOS.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2020-10-15  David Kilzer  <ddkilzer@apple.com>
 
         PDFPlugin.mm:2303:139: error: type 'SEL _Nullable' cannot be narrowed to 'bool' in initializer list [-Wc++11-narrowing]
